// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Phase 0 — preview scene structural snapshot > Foot B fixture at step=last 1`] = `
{
  "elementsByClass": {
    "foot-body": 1,
    "foot-slot": 1,
    "history": 1,
    "needle-dot": 1,
    "needle-marker": 1,
    "needle-pulse": 1,
    "needle-shaft": 1,
    "needle-tip": 1,
    "presser-foot": 1,
    "pv-fabric": 1,
    "pv-fabric-fill": 1,
    "pv-x-limit": 1,
    "pv-x-limit-line": 2,
    "real-highlight": 5,
    "real-thread": 5,
    "realistic-thread": 1,
    "repeat": 3,
    "repeats": 1,
    "start-halo": 1,
    "start-indicator": 1,
    "stitch-puncture": 20,
    "stitch-puncture-hole": 20,
    "stitch-punctures": 5,
    "thread-outline": 5,
    "x-axis": 1,
  },
  "elementsByTag": {
    "circle": 43,
    "defs": 1,
    "g": 16,
    "line": 8,
    "path": 15,
    "pattern": 1,
    "polygon": 1,
    "rect": 8,
  },
  "rootViewBox": null,
}
`;

exports[`Phase 0 — preview scene structural snapshot > Foot S fixture at step=0 (initial state) 1`] = `
{
  "elementsByClass": {
    "foot-body": 1,
    "foot-slot": 1,
    "history": 1,
    "presser-foot": 1,
    "pv-fabric": 1,
    "pv-fabric-fill": 1,
    "pv-x-limit": 1,
    "pv-x-limit-line": 2,
    "real-highlight": 3,
    "real-thread": 3,
    "real-thread-jump": 3,
    "realistic-thread": 1,
    "repeat": 2,
    "repeats": 1,
    "start-halo": 1,
    "start-indicator": 1,
    "stitch-puncture": 105,
    "stitch-puncture-hole": 105,
    "stitch-punctures": 3,
    "thread-outline": 3,
    "x-axis": 1,
  },
  "elementsByTag": {
    "circle": 211,
    "defs": 1,
    "g": 12,
    "line": 7,
    "path": 12,
    "pattern": 1,
    "rect": 8,
  },
  "rootViewBox": null,
}
`;

exports[`Phase 0 — preview scene structural snapshot > Foot S fixture at step=last 1`] = `
{
  "elementsByClass": {
    "foot-body": 1,
    "foot-slot": 1,
    "history": 1,
    "needle-dot": 1,
    "needle-marker": 1,
    "needle-pulse": 1,
    "needle-shaft": 1,
    "needle-tip": 1,
    "presser-foot": 1,
    "pv-fabric": 1,
    "pv-fabric-fill": 1,
    "pv-x-limit": 1,
    "pv-x-limit-line": 2,
    "real-highlight": 4,
    "real-thread": 4,
    "real-thread-jump": 4,
    "realistic-thread": 1,
    "repeat": 2,
    "repeats": 1,
    "start-halo": 1,
    "start-indicator": 1,
    "stitch-puncture": 140,
    "stitch-puncture-hole": 140,
    "stitch-punctures": 4,
    "thread-outline": 4,
    "x-axis": 1,
  },
  "elementsByTag": {
    "circle": 283,
    "defs": 1,
    "g": 14,
    "line": 8,
    "path": 16,
    "pattern": 1,
    "polygon": 1,
    "rect": 8,
  },
  "rootViewBox": null,
}
`;
